@@ -1,3 +1,9 @@
+2001-05-25  Martin Baulig  <baulig@suse.de>
+
+	* gnome-selector-client.c
+	(gnome_selector_client_set_uri): New function.
+	(gnome_selector_client_add_uri): New function.
+
 2001-05-23  Martin Baulig  <baulig@suse.de>
 
 	* gnome-selector-client.c (gnome_selector_client_construct): Create the
